--- a/app/_coaching-job.html
+++ b/app/_coaching-job.html
@@ -1,18 +1,18 @@
-<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
+<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/kompm.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Coaching zum Erhalt eines Arbeitsplatzes</div>
+            <div class="global-item breadcrumbs-article">Coaching zum Erhalt eines Arbeitsplatzes</div>
         </div>
         <h1 class="coaching-job-title">inAut unterstützt Sie und Ihren Arbeitgeber im Arbeitsalltag</h1>
-        <div class="angebot-text search-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
+        <div class="global-text search-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
