--- a/app/_job-description.html
+++ b/app/_job-description.html
@@ -1,15 +1,15 @@
-<main class="main search-missions">
+<main class="main breadcrumbs">
 	<div class="container job-description-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">IT-Consultantg</a>
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">IT-Consultantg</a>
         </div>
-        <div class="search-missions-item">
-            <div class="angebot-item search-missions-article">Voll-/Teilzeit für Standort Zürich</div>
+        <div class="breadcrumbs-item">
+            <div class="global-item breadcrumbs-article">Voll-/Teilzeit für Standort Zürich</div>
         </div>
         <h1>IT-Consultant gesucht</h1>
-        <div class="angebot-text search-text">Unsere IT-Fachkräfte profitieren von einer festen Anstellung, Job Coaching und guten Karrieremöglichkeiten. Unsere Kunden profitieren von den ausgeprägten Stärken im Bereich Mustererkennung,
+        <div class="global-text search-text">Unsere IT-Fachkräfte profitieren von einer festen Anstellung, Job Coaching und guten Karrieremöglichkeiten. Unsere Kunden profitieren von den ausgeprägten Stärken im Bereich Mustererkennung,
             Analyse und Konzentration.
         </div>
         <div class="line-dec">
@@ -46,12 +46,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="jobs.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="jobs.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
