--- a/app/_job-search.html
+++ b/app/_job-search.html
@@ -1,18 +1,18 @@
-<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Suche eines Ausbildungsplatzes</a>
+<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Suche eines Ausbildungsplatzes</a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/scoolm.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Suche eines Ausbildungsplatzes</div>
+            <div class="global-item breadcrumbs-article">Suche eines Ausbildungsplatzes</div>
         </div>
         <h1>Vollumfängliche Unterstützung für den erfolgreichen Lehrabschluss</h1>
-        <div class="angebot-text search-text">inAut hilft bei der Erstellung des Bewerbungsdossiers, organisiert die für die Ausbildung obligatorischen Tests (z.B. Multi-Check) in einem angepassten Rahmen, akquiriert entsprechende Arbeitgeber und begleitet Sie zu den Vorstellungsgesprächen.</div>
+        <div class="global-text search-text">inAut hilft bei der Erstellung des Bewerbungsdossiers, organisiert die für die Ausbildung obligatorischen Tests (z.B. Multi-Check) in einem angepassten Rahmen, akquiriert entsprechende Arbeitgeber und begleitet Sie zu den Vorstellungsgesprächen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
