--- a/app/_jobs.html
+++ b/app/_jobs.html
@@ -1,12 +1,12 @@
-<main class="main angebot">
+<main class="main global">
 	<div class="jobs-page">
-        <div class="angebot-header">
-            <img class="angebot-img" src="img/jobm.png" alt="img">
+        <div class="global-header">
+            <img class="global-img" src="img/jobm.png" alt="img">
         </div>
         <div class="container jobs">
-            <div class="angebot-item">Jobs</div>
-            <h1 class="angebot-title">Mehr als “nur” eine Jobbörse</h1>
-            <div class="angebot-text an-text">Es gibt Tätigkeiten und Berufe, für welche neurodiverse Menschen genau die richtigen Fähigkeiten und Stärken mitbringen. Gerne veröffentlichen wir hier Ihre Stellenausschreibung - anonym - und führen das erste Kennenlernen im recruiting-prozess für Sie durch. Wir entscheiden dann, gemeinsam mit den Bewerber/innen, ob Sie sich alleine bei Ihnen vorstellen oder gerne unsere Unterstützung in Anspruch nehmen wollen. Auch Sie als Arbeitgeber/in können entscheiden, ob Sie inAut gerne beim Erstgespräch dabei haben möchten.</div>
+            <div class="global-item">Jobs</div>
+            <h1 class="global-title">Mehr als “nur” eine Jobbörse</h1>
+            <div class="global-text an-text">Es gibt Tätigkeiten und Berufe, für welche neurodiverse Menschen genau die richtigen Fähigkeiten und Stärken mitbringen. Gerne veröffentlichen wir hier Ihre Stellenausschreibung - anonym - und führen das erste Kennenlernen im recruiting-prozess für Sie durch. Wir entscheiden dann, gemeinsam mit den Bewerber/innen, ob Sie sich alleine bei Ihnen vorstellen oder gerne unsere Unterstützung in Anspruch nehmen wollen. Auch Sie als Arbeitgeber/in können entscheiden, ob Sie inAut gerne beim Erstgespräch dabei haben möchten.</div>
         </div>
 	</div>
 
