--- a/app/about-us.html
+++ b/app/about-us.html
@@ -52,15 +52,15 @@
 		</div>
 	</div>
 </header>
-	<main class="main angebot">
-	<div class="angebot-top">
-        <div class="angebot-header">
-            <img class="angebot-img" src="img/docms.png" alt="img">
+	<main class="main global">
+	<div class="global-top">
+        <div class="global-header">
+            <img class="global-img" src="img/docms.png" alt="img">
         </div>
         <div class="container">
-            <div class="angebot-item">Über uns</div>
-            <h1 class="angebot-title">Wir sind Dolmetscher, die Türen öffnen</h1>
-            <div class="angebot-text an-text">Durch jahrelange Erfahrung und ein diverses Team, welches verschiedene Stärken und Ansätze zusammenbringt, gelingt es uns, Möglichkeiten zu schaffen. Wir übersetzen die Fähigkeiten unserer Klient/innen auf Jobs und Ausbildungen in der Privatwirtschaft und wirken auch im Arbeitsalltag vermittelnd und unterstützend. Zusammen mit unseren engagierten Arbeitgebenden, welche einen Unterschied machen wollen, öffnen wir Türen in die Privatwirtschaft. </div>
+            <div class="global-item">Über uns</div>
+            <h1 class="global-title">Wir sind Dolmetscher, die Türen öffnen</h1>
+            <div class="global-text an-text">Durch jahrelange Erfahrung und ein diverses Team, welches verschiedene Stärken und Ansätze zusammenbringt, gelingt es uns, Möglichkeiten zu schaffen. Wir übersetzen die Fähigkeiten unserer Klient/innen auf Jobs und Ausbildungen in der Privatwirtschaft und wirken auch im Arbeitsalltag vermittelnd und unterstützend. Zusammen mit unseren engagierten Arbeitgebenden, welche einen Unterschied machen wollen, öffnen wir Türen in die Privatwirtschaft. </div>
             <div class="line-dec">
                 <div class="line-dec-content"></div>
             </div>
