--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -52,18 +52,18 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Online-Workshop Webentwicklung</a>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Online-Workshop Webentwicklung</a>
         </div>
-        <div class="search-missions-item">
-            <div class="angebot-item search-missions-article">Res Kocher, 20. Mai 2021</div>
+        <div class="breadcrumbs-item">
+            <div class="global-item breadcrumbs-article">Res Kocher, 20. Mai 2021</div>
         </div>
         <h1 class="coaching-job-title">Online-Workshop Webentwicklung</h1>
-        <div class="angebot-text search-text">Lerne den Beruf Applikationsentwickler/in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht und ob Applikationsentwicklung die richtige Fachrichtung für dich ist? Du willst dich mit deiner Bewerbung von anderen abheben? Dann ist dies der richtige Kurs für dich - und das Beste: er ist kostenlos!</div>
+        <div class="global-text search-text">Lerne den Beruf Applikationsentwickler/in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht und ob Applikationsentwicklung die richtige Fachrichtung für dich ist? Du willst dich mit deiner Bewerbung von anderen abheben? Dann ist dies der richtige Kurs für dich - und das Beste: er ist kostenlos!</div>
         <div class="line-dec">
             <div class="line-dec-content decoration"></div>
         </div>
@@ -119,16 +119,16 @@
                 <li>Serien und Film Junkie</li>
             </ul>
         </div>
-        <div class="search-missions-back blog-article-arows">
-            <div class="search-missions-content">
-                <a class="search-missions-img" href="current.html">
+        <div class="breadcrumbs-back blog-article-arows">
+            <div class="breadcrumbs-content">
+                <a class="breadcrumbs-img" href="current.html">
                     <img src="img/svg/leftm.svg" alt="img">
                 </a>
-                <div class="search-missions-text">Zurück</div>
+                <div class="breadcrumbs-text">Zurück</div>
             </div>
-            <div class="search-missions-content">
-                <div class="search-missions-text">Nächster Artikel</div>
-                <a class="search-missions-img blog-article-arows-right" href="#">
+            <div class="breadcrumbs-content">
+                <div class="breadcrumbs-text">Nächster Artikel</div>
+                <a class="breadcrumbs-img blog-article-arows-right" href="#">
                     <img src="img/svg/ar_right.svg" alt="img">
                 </a>
             </div>
