--- a/app/coaching-training.html
+++ b/app/coaching-training.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Coaching während der Ausbildung</a>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Coaching während der Ausbildung</a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/famm.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Coaching während der Ausbildung</div>
+            <div class="global-item breadcrumbs-article">Coaching während der Ausbildung</div>
         </div>
         <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
-        <div class="angebot-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
+        <div class="global-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
