--- a/app/contact.html
+++ b/app/contact.html
@@ -55,7 +55,7 @@
 	<main class="main">
 	<div class="container">
         <div class="contact">
-            <div class="angebot-item">Kontakt</div>
+            <div class="global-item">Kontakt</div>
             <h1>Fragen zu unseren Angeboten?</h1>
             <div class="contact-text">Gerne geben wir Ihnen persönlich detaillierte Auskünfte zu unseren Angeboten oder beraten Sie telefonisch zu Ihrem Anliegen. Zögern Sie nicht uns zu kontaktieren!</div>
             <div class="row">
@@ -65,7 +65,7 @@
                         <p>Waldstätterstrasse 3 6003 Luzern</p>
                     </div>
                     <div>
-                        <div class="angebot-item search-missions-article">hre Ansprechperson:</div>
+                        <div class="global-item breadcrumbs-article">hre Ansprechperson:</div>
                         <div class="contact-block-left-text">Manuela Allemann (Sekretariat)</div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div>E-Mail <a href="malito:info@inaut.ch">info@inaut.ch</a></div>
                     </div>
                     <div>
-                        <div class="angebot-item search-missions-article">Für schützenswerte Dokumente:</div>
+                        <div class="global-item breadcrumbs-article">Für schützenswerte Dokumente:</div>
                         <div>E-Mail <a href="malito:inaut@hin.ch">inaut@hin.ch</a></div>
                     </div>
                 </div>
@@ -91,47 +91,15 @@
         </div>
 
     </div>
-    <div class="container search-missions-back arrow-left-mob">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back arrow-left-mob">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
-<!-- <main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Unterstützung im Arbeitsalltag</a>
-        </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
-                <img src="img/svg/setim.svg" alt="img">
-            </div>
-            <div class="angebot-item search-missions-article">Unterstützung im Arbeitsalltag</div>
-        </div>
-        <h1>inAut berät Sie und Ihre Firma kompetent und bedarfsgerecht</h1>
-        <div class="angebot-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
-    </div>
-    <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="search-missions-text">Zurück</div>
-        </div>
-    </div>
-</main> -->
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
