--- a/app/for-companies.html
+++ b/app/for-companies.html
@@ -52,16 +52,16 @@
 		</div>
 	</div>
 </header>
-	<main class="main angebot">
-	<div class="angebot-top">
-        <div class="angebot-top-content">
-            <div class="angebot-header">
-                <img class="angebot-img" src="img/bildf.png" alt="img">
+	<main class="main global">
+	<div class="global-top">
+        <div class="global-top-content">
+            <div class="global-header">
+                <img class="global-img" src="img/bildf.png" alt="img">
             </div>
             <div class="container">
-                <div class="angebot-item">Für Unternehmen</div>
-                <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
-                <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
+                <div class="global-item">Für Unternehmen</div>
+                <h1 class="global-title">Wie mache ich mein Team “neuro”-divers?</h1>
+                <div class="global-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
             </div>
         </div>
         <div class="container">
@@ -69,30 +69,30 @@
                 <div class="line-dec-content"></div>
             </div>
 
-            <div class="angebot-block">
+            <div class="global-block">
                 <div class="row">
-                    <div class="col-12 col-sm-4 angebot-block-content">
-                        <div class="angebot-block-img">
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
                             <img src="img/svg/chair.svg" alt="img">
                         </div>
-                        <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
-                        <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
+                        <h2 class="global-block-title">Eine neurodiverse Person anstellen</h2>
+                        <div class="global-text global-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
                         <a class="general-link" href="hire-person.html">mehr Erfahren</a>
                     </div>
-                    <div class="col-12 col-sm-4 angebot-block-content">
-                        <div class="angebot-block-img">
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
                             <img src="img/svg/setm.svg" alt="img">
                         </div>
-                        <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
-                        <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
+                        <h2 class="global-block-title">Unterstützung im Arbeitsalltag</h2>
+                        <div class="global-text global-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
                         <a class="general-link" href="support-in-everyday-work.html">mehr Erfahren</a>
                     </div>
-                    <div class="col-12 col-sm-4 angebot-block-content">
-                        <div class="angebot-block-img">
+                    <div class="col-12 col-sm-4 global-block-content">
+                        <div class="global-block-img">
                             <img src="img/svg/shapm.svg" alt="img">
                         </div>
-                        <h2 class="angebot-block-title">Weiterbildungen</h2>
-                        <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
+                        <h2 class="global-block-title">Weiterbildungen</h2>
+                        <div class="global-text global-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
                         <a class="general-link" href="advanced-training.html">mehr Erfahren</a>
                     </div>
                 </div>
@@ -143,46 +143,6 @@
     </div>
 </main>
 
-<!-- <div class="swiper-container mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-  </div> -->
-
-  <!-- <div class="our-network">
-    <div class="container">
-        <div class="home-title current-title">Unser Netzwerk</div>
-        <div class="our-network-content">
-            <div class="swiper-container mySwiper3">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="img/autismus_logo.png" alt="img">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/bso_logo.png" alt="img">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/auticon_logo.png" alt="img">
-                    </div>
-                </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
-</div> -->
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
