--- a/app/professional-clarification.html
+++ b/app/professional-clarification.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#"> Berufliche Abklärung in der Privatwirtschaft </a>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#"> Berufliche Abklärung in der Privatwirtschaft </a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/polm.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article"> Berufliche Abklärung in der Privatwirtschaft </div>
+            <div class="global-item breadcrumbs-article"> Berufliche Abklärung in der Privatwirtschaft </div>
         </div>
         <h1>Abklärung der Eignung für einen Beruf</h1>
-        <div class="angebot-text search-text">Ein Schnuppereinsatz von wenigen Tagen zeigt oftmals nicht, ob ein Beruf auch über längere Zeit die richtige Wahl ist. Im Rahmen der beruflichen Abklärung von einem Monat sucht inAut eine Firma in der Privatwirtschaft als Partner und unterstützt Klient/innen und Arbeitgeber/innen bei der Abklärung der Eignung für den Beruf.</div>
+        <div class="global-text search-text">Ein Schnuppereinsatz von wenigen Tagen zeigt oftmals nicht, ob ein Beruf auch über längere Zeit die richtige Wahl ist. Im Rahmen der beruflichen Abklärung von einem Monat sucht inAut eine Firma in der Privatwirtschaft als Partner und unterstützt Klient/innen und Arbeitgeber/innen bei der Abklärung der Eignung für den Beruf.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
