--- a/app/current.html
+++ b/app/current.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-item">
-            <div class="angebot-item search-missions-article">Aktuelles</div>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-item">
+            <div class="global-item breadcrumbs-article">Aktuelles</div>
         </div>
         <h1 class="text-p">News und Hintergrundinformationen </h1>
-        <div class="angebot-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
+        <div class="global-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
         <div class="news text-p">
             <div class="news-left">
                 <img class="news-left-img" src="img/kursaalbern_aussenansicht.png" alt="img">
             </div>
             <div class="news-right">
-                <div class="angebot-item">Natascha Nikolic, 4. August 2021</div>
+                <div class="global-item">Natascha Nikolic, 4. August 2021</div>
                 <h3 class="news-title team-indent">2. Nationaler Autismus Kongress</h3>
-                <div class="angebot-text team-indent">autismusschweiz ist stolz, drei Jahre nach dem ersten gesamtschweizerischen Kongress zum Thema Autismus, den zweiten Autismus-Kongress in Bern zu präsentieren.</div>
+                <div class="global-text team-indent">autismusschweiz ist stolz, drei Jahre nach dem ersten gesamtschweizerischen Kongress zum Thema Autismus, den zweiten Autismus-Kongress in Bern zu präsentieren.</div>
                 <a class="general-link" href="#">mehr Erfahren</a>
             </div>
         </div>
@@ -74,9 +74,9 @@
             <div class="news-left-block">
                 <img class="news-block-img" src="img/angular.png" alt="img">
                 <div class="news-card">
-                    <div class="angebot-item">Res Kocher, 20. Mai 2021</div>
+                    <div class="global-item">Res Kocher, 20. Mai 2021</div>
                     <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
-                    <div class="angebot-text team-indent">Lerne den Beruf Applikationsentwickler:in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht...</div>
+                    <div class="global-text team-indent">Lerne den Beruf Applikationsentwickler:in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht...</div>
                     <a class="general-link" href="blog-article.html">mehr Erfahren</a>
                 </div>
             </div>
@@ -84,9 +84,9 @@
             <div class="news-right-block">
                 <img class="news-block-img" src="img/wdr.png" alt="img">
                 <div class="news-card">
-                    <div class="angebot-item">WDR, 22. Juni 2021</div>
+                    <div class="global-item">WDR, 22. Juni 2021</div>
                     <h3 class="news-title team-indent">Leben als Autist</h3>
-                    <div class="angebot-text team-indent">Dass etwas mit ihm nicht stimmt, das merkt Julian aus Lennestadt schon sehr früh. Doch erst mit zwölf Jahren erhält er die Diagnose - Asperger Autismus. Bis dahin war es ein schwerer Weg - nicht nur für Julian.</div>
+                    <div class="global-text team-indent">Dass etwas mit ihm nicht stimmt, das merkt Julian aus Lennestadt schon sehr früh. Doch erst mit zwölf Jahren erhält er die Diagnose - Asperger Autismus. Bis dahin war es ein schwerer Weg - nicht nur für Julian.</div>
                     <a class="general-link" href="#">mehr Erfahren</a>
                 </div>
             </div>
