--- a/app/search-of-trial-missions.html
+++ b/app/search-of-trial-missions.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Suche von Schnuppereinsätzen</a>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Suche von Schnuppereinsätzen</a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/nosem.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Suche von Schnuppereinsätzen</div>
+            <div class="global-item breadcrumbs-article">Suche von Schnuppereinsätzen</div>
         </div>
         <h1>Wir suchen mit Ihnen und begleiten Sie bei der Schnupperlehre</h1>
-        <div class="angebot-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
+        <div class="global-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
