--- a/app/support-in-everyday-work.html
+++ b/app/support-in-everyday-work.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Unterstützung im Arbeitsalltag</a>
+	<main class="main breadcrumbs">
+	<div class="container breadcrumbs-container">
+        <div class="breadcrumbs-way">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Unterstützung im Arbeitsalltag</a>
         </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
+        <div class="breadcrumbs-item">
+            <div class="breadcrumbs-image">
                 <img src="img/svg/setim.svg" alt="img">
             </div>
-            <div class="angebot-item search-missions-article">Unterstützung im Arbeitsalltag</div>
+            <div class="global-item breadcrumbs-article">Unterstützung im Arbeitsalltag</div>
         </div>
         <h1>inAut berät Sie und Ihre Firma kompetent und bedarfsgerecht</h1>
-        <div class="angebot-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
+        <div class="global-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
+    <div class="container breadcrumbs-back">
+        <div class="breadcrumbs-content">
+            <a class="breadcrumbs-img" href="angebot.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="search-missions-text">Zurück</div>
+            <div class="breadcrumbs-text">Zurück</div>
         </div>
     </div>
 </main>
