--- a/app/_current.html
+++ b/app/_current.html
@@ -18,7 +18,9 @@
         </div>
         <div class="news-content">
             <div class="news-left-block">
-                <img class="news-block-img" src="img/angular.png" alt="img">
+                <div class="news-img">
+                    <img class="news-block-img" src="img/angular.png" alt="img">
+                </div>
                 <div class="news-card">
                     <div class="global-item">Res Kocher, 20. Mai 2021</div>
                     <h3 class="news-title team-indent">Online Workshop Web-Entwicklung</h3>
@@ -28,7 +30,9 @@
             </div>
 
             <div class="news-right-block">
-                <img class="news-block-img" src="img/wdr.png" alt="img">
+                <div class="news-img">
+                    <img class="news-block-img" src="img/wdr.png" alt="img">
+                </div>
                 <div class="news-card">
                     <div class="global-item">WDR, 22. Juni 2021</div>
                     <h3 class="news-title team-indent">Leben als Autist</h3>
